# eventstreams-python-sdk

./: .bumpversion.cfg  .bumpversion.toml  .pylintrc  .travis.yml  CONTRIBUTING.md  Makefile  README.md  admin-rest-api.yaml  adminrest.yaml  example.py  package.json  pylint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  schemaregistry.yaml  setup.py  setup.py.bak  tox.ini
eventstreams_sdk/: __init__.py  adminrest_v1.py  common.py  schemaregistry_v1.py  version.py
eventstreams_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
eventstreams_sdk/eventstreams_sdk/: adminrest_v1.py
eventstreams_sdk/test/unit/: test_adminrest_v1.py
test/unit/: test_adminrest_v1.py  test_common.py  test_schemaregistry_v1.py
